# OpenSandbox

./: .gitignore  AGENTS.md  README.md  SECURITY.md
server/: DEVELOPMENT.md  Dockerfile  README.md  README_zh.md  configuration.md  docker-compose.example.yaml  example.batchsandbox-template.yaml  example.config.k8s.toml  example.config.k8s.zh.toml  example.config.toml  example.config.zh.toml  pyproject.toml
server/opensandbox_server/: config.py  main.py  startup_guard.py
server/opensandbox_server/api/: devops.py  lifecycle.py  schema.py
server/opensandbox_server/examples/: example.config.k8s.toml  example.config.k8s.zh.toml  example.config.toml  example.config.zh.toml
server/opensandbox_server/services/: constants.py  docker.py  docker_port_allocator.py  endpoint_auth.py  sandbox_service.py  snapshot_repository.py  snapshot_runtime_factory.py  snapshot_service.py
server/src/: cli.py  config.py
server/src/api/: lifecycle.py  schema.py
server/src/middleware/: auth.py
server/src/services/: constants.py  docker.py  factory.py  (+4 more)
server/tests/: smoke.sh  test_agent_sandbox_service.py  test_auth_middleware.py  test_config.py  test_devops.py  test_docker_egress_policy.py  test_docker_endpoint.py  test_docker_port_allocator.py  test_docker_service.py  test_docker_snapshot_runtime.py  test_endpoint_auth.py  test_ingress.py  test_main_api_key_guard.py  test_ossfs_mixin.py  test_routes_egress.py  test_routes_proxy.py  test_routes_snapshots.py  test_schema.py  test_snapshot_repository_sqlite.py  test_snapshot_runtime_factory.py  test_snapshot_service.py  test_validators.py
(+667 files in other folders)
